# colossusx

./: CMakeLists.txt  Checklist.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_EXPANDED.md  Makefile  README.md  REVIEW_CHECKLIST.md  main.go  spec.md
bench/: bench_common.cpp  bench_common.h  bench_compressed_retention.cpp  bench_full_retention.cpp  bench_half_retention.cpp  bench_hotset_retention.cpp  bench_inputs.h  bench_minimal_retention.cpp  bench_quarter_retention.cpp  bench_verifier.cpp
core/: epoch_cache.cpp  epoch_cache.h  epoch_seed.cpp  epoch_seed.h  get_item.cpp  get_item.h  header.cpp  header.h  pow.cpp  pow.h  round_function.cpp  round_function.h  scratch.cpp  scratch.h  shake256.cpp  shake256.h  verifier.cpp  verifier.h
reference/: profiles.md  test_vectors.md
tests/: test_benchmarks.cpp  test_epoch_cache.cpp  test_epoch_seed.cpp  test_get_item.cpp  test_header_digest.cpp  test_helpers.h  test_main.cpp  test_pow_replay.cpp  test_round_function.cpp  test_scratch_init.cpp  test_vectors.cpp  test_verifier.cpp
tools/: generate_test_vectors.cpp  generate_test_vectors.h  generate_test_vectors_main.cpp
